--- a/index.html
+++ b/index.html
@@ -11,79 +11,85 @@
 <body>
     <!--PAGE HEADER  -->
     <header>
-        <a href="">
-            <span>WEB</span>STUDIO
-        </a>
-        <ul>
-            <li>
-                <a href="">Studio</a>
-            </li>
-            <li>
-                <a href="">Portfolio</a>
-            </li>
-            <li>
-                <a href="">Contacts</a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-        </ul>
+        <nav><a href="./index.html">WebStudio
+            </a>
+            <ul>
+                <li>
+                    <a href="">Studio</a>
+                </li>
+                <li>
+                    <a href="">Portfolio</a>
+                </li>
+                <li>
+                    <a href="">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
+
     </header>
     <main>
+        <!-- Order Service -->
         <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
+        <!-- Goal -->
         <section>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
+                    <h2>Strategy</h2>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h2>Punctuality</h2>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h2>Diligence</h2>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h2>Technologies</h2>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
+        <!-- Our Team -->
         <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="image/mark.png" alt="mark-guerrero">
+                    <img src="./image/mark.jpg" alt="mark-guerrero"width: 264px; height: 260px;>
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="image/tom.png" alt="tom-ford">
+                    <img src="./image/tom.jpg" alt="tom-ford"width: 264px; height: 260px;>
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="image/camila.png" alt="camila-garcia">
+                    <img src="./image/camila.jpg" alt="camila-garcia"width: 264px; height: 260px;>
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="image/daniel.png" alt="daniel-wilson">
+                    <img src="./image/daniel.jpg" alt="daniel-wilson" width: 264px; height: 260px;>
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -92,7 +98,7 @@
 
     </main>
     <footer>
-        <h4><span>WEB</span>STUDIO</h4>
+        <a href="./index.htm">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
