--- a/index.html
+++ b/index.html
@@ -74,22 +74,30 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./image/mark.jpg" alt="mark-guerrero"width: 264px; height: 260px;>
+                    <img src="./image/mark.jpg" alt="mark-guerrero"
+                    width="264"
+                    height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./image/tom.jpg" alt="tom-ford"width: 264px; height: 260px;>
+                    <img src="./image/tom.jpg" alt="tom-ford" width="264"
+                    height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./image/camila.jpg" alt="camila-garcia"width: 264px; height: 260px;>
+                    <img src="./image/camila.jpg" alt="camila-garcia"
+                    width="264"
+                    height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./image/daniel.jpg" alt="daniel-wilson" width: 264px; height: 260px;>
+                    <img src="./image/daniel.jpg" alt="daniel-wilson" 
+                    width="264"
+                    height="260"
+                    >
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
