--- a/index.html
+++ b/index.html
@@ -75,17 +75,19 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./image/mark.jpg" alt="mark-guerrero"
+                    <a><img src="./image/mark.jpg" alt="mark-guerrero"
                     width="264"
                     height="260">
                     <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p>Product Designer</p></a>
+                    
                 </li>
                 <li>
-                    <img src="./image/tom.jpg" alt="tom-ford" width="264"
+                    <a><img src="./image/tom.jpg" alt="tom-ford" width="264"
                     height="260">
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p>Frontend Developer</p></a>
+                    
                 </li>
                 <li>
                     <img src="./image/camila.jpg" alt="camila-garcia"
