--- a/index.html
+++ b/index.html
@@ -75,29 +75,29 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <a><img src="./image/mark.jpg" alt="mark-guerrero"
+                    <img src="./images/mark.jpg" alt="mark-guerrero"
                     width="264"
                     height="260">
                     <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p></a>
+                    <p>Product Designer</p>
                     
                 </li>
                 <li>
-                    <a><img src="./image/tom.jpg" alt="tom-ford" width="264"
+                    <img src="./images/tom.jpg" alt="tom-ford" width="264"
                     height="260">
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p></a>
+                    <p>Frontend Developer</p>
                     
                 </li>
                 <li>
-                    <img src="./image/camila.jpg" alt="camila-garcia"
+                    <img src="./images/camila.jpg" alt="camila-garcia"
                     width="264"
                     height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./image/daniel.jpg" alt="daniel-wilson" 
+                    <img src="./images/daniel.jpg" alt="daniel-wilson" 
                     width="264"
                     height="260"
                     >
